--- a/ex4-pizzaria-base/pom.xml
+++ b/ex4-pizzaria-base/pom.xml
@@ -41,6 +41,14 @@
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 
+        <dependency>
+
+            <groupId>org.springframework.boot</groupId>
+
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+
+        </dependency>
+
 		<!-- PostgreSQL Driver -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
