--- a/ex4-pizzaria-base/src/main/resources/application.yaml
+++ b/ex4-pizzaria-base/src/main/resources/application.yaml
@@ -1,8 +1,18 @@
 spring:
   datasource:
-    url: jdbc:postgresql://ep-icy-sunset-ac0bhd6h-pooler.sa-east-1.aws.neon.tech/neondb?user=neondb_owner&password=npg_ZsPNI67JuxVd&sslmode=require&channelBinding=require
+    url: jdbc:postgresql://ep-icy-sunset-ac0bhd6h-pooler.sa-east-1.aws.neon.tech/neondb
+    username: neondb_owner
+    password: npg_ZsPNI67JuxVd
     driver-class-name: org.postgresql.Driver
 
+  jpa:
+
+      hibernate:
+          ddl-auto: none
+      show-sql: true 
+      properties:
+          hibernate:
+                format_sql: true
 
 
 logging:
